# tree-sitter-jai

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  jai.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jai.pc.in
bindings/c/tree_sitter/: tree-sitter-jai.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jai/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJaiTests/: TreeSitterJaiTests.swift
src/: grammar.json  node-types.json
